@@ -1,3 +1,7 @@
+1999-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (floodFillTexture): Changed coordinates to unsigned.
+
 1999-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (medianFilter): New method.
